feat: rm header :+1:
